--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord.js": "^13.6.0",
     "distube": "^3.3.3",
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "ffmpeg": "^0.0.4",
     "node-fetch": "^2.6.7",
     "tweetnacl": "^1.0.3",
