--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "opusscript": "^0.0.8",
     "sodium-native": "^3.3.0",
     "tweetnacl": "^1.0.3",
+    "youtube-dl-exec": "^2.0.11",
     "ytdl-core": "^4.11.0",
     "ytdl-core-discord": "^1.3.1"
   }
