--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-fetch": "^2.6.7",
     "opusscript": "^0.0.8",
     "sodium-native": "^3.3.0",
+    "telegraf": "^4.7.0",
     "tweetnacl": "^1.0.3",
     "youtube-dl-exec": "^2.0.11",
     "ytdl-core": "^4.11.0",
